image loading fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="sound_settings_action">Sound settings</string>
     <string name="color_theme_action">Color theme</string>
     <string name="version_label">Version 1.0</string>
+    <string name="permission_denied_label">Storage permission denied. Please, go to settings and enable it.</string>
 
     // Search bar
     <string name="search_bar_hint">Search for music</string>
