fix search bar related bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     
     // Home Screen
     <string name="add_new_playlist">Add new playlist</string>
+    <string name="album_info_label">%d tracks</string>
 
 </resources>
